# E-Share

./: CMakeLists.txt  README.md
docs/: software-design.md
src/: main.cpp
src/cli/: CliHandler.cpp  CliHandler.h
src/common/: Logger.cpp  Logger.h
src/config/: ConfigLoader.cpp  ConfigLoader.h
src/control/: ControlClient.cpp  ControlClient.h  ControlServer.cpp  ControlServer.h  DeviceDiscovery.cpp  DeviceDiscovery.h  DeviceInfo.h
src/media/: PullService.cpp  PullService.h  PushService.cpp  PushService.h  RtspServerManager.cpp  RtspServerManager.h
src/network/: NetworkUtil.h
src/session/: SessionManager.cpp  SessionManager.h
